fix(page-grid): min-width too long

--- a/packages/shared/page-grid/src/pageGrid.module.css
+++ b/packages/shared/page-grid/src/pageGrid.module.css
@@ -10,7 +10,7 @@
 }
 
 .pageGrid {
-    --column-width: min(calc(50vw - var(--edge-width) - var(--nav-width)), var(--80-body-chars));
+    --column-width: calc(50vw - var(--edge-width) - var(--nav-width));
     display: grid;
     grid-template-columns: 0px [left-edge-start] 1fr [left-edge-end left-nav-start] var(--nav-width) [left-nav-end left-content-start] var(--column-width) [left-content-end middle right-content-start] var(--column-width)[right-content-end right-nav-start] var(--nav-width) [right-nav-end right-edge-start] 1fr [right-edge-end] 0px;
     grid-template-rows: 0px [top-edge-start] var(--edge-width) [top-edge-end top-nav-start] var(--nav-height) [top-nav-end content-start] repeat(auto-fill, minmax(var(--edge-width), min-content));
